##Text encoding: utf-8

2010-08-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/atom.cc: fixed various serialization issues.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/loaders/cml/cml.cc: ditto.

2010-08-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: replaced all printf and scanf instances.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/loaders/cif/cif.cc: ditto.
	* plugins/loaders/cml/cml.cc: ditto.

2010-08-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/application.cc: more setlocale eradication work.
	* plugins/loaders/cml/cml.cc: ditto.
	* plugins/paint/selection/bracketstool.cc: statrt testing the selection.
	* plugins/paint/selection/bracketstool.h: ditto.
	* programs/crystal/document.cc: more setlocale eradication work.

2010-08-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: more setlocale eradication work.
	* libs/gcp/theme.cc: ditto.
	* libs/gcr/document.cc: ditto.
	* programs/crystal/document.cc: ditto.

2010-08-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: make things compile again with current goffice.
	* goffice/gogcrystalapp.cc: more work on crystal support.
	* goffice/gogcrystalwin.cc: ditto.
	* libs/gcp/application.cc: more setlocale eradication work.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/view.cc: ditto.
	* libs/gcr/window.h: more work on crystal support in component.

2010-08-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: more setlocale eradication work.
	* libs/gcp/theme.cc: ditto.
	* libs/gcu/macros.h: new conversionmacros between char* ans xmlChar*.
	* libs/gcu/xml-utils.cc: new ReadInt() and WriteInt convenience functions.
	* libs/gcu/xml-utils.h: ditto.

2010-08-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcrystalapp.cc: do not use setlocale when loading a gcrystal
	file.
	* libs/gcr/document.cc: ditto.